# SovereignSkirmish

./: build.sh
docs/: rules.md
source/: CMakeLists.txt
source/src/: log.h  main.cpp
src/: main.cpp
